# Scholarly-Citation-Oriented-Paper-Explorer

./: .gitignore  FLUTTER_DOCKER_SETUP.md  README.md
flutter_ui/: pubspec.yaml
flutter_ui/lib/: config.dart  main.dart  main_old.dart
flutter_ui/test/: widget_test.dart
flutter_ui/web/: index.html
flutter_ui/windows/: CMakeLists.txt
flutter_ui/windows/runner/: Runner.rc  main.cpp
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
server/__tests__/: conftests.py  test_api.py  test_api_orchestration.py  test_citation_network.py  test_postgres_db.py  test_retrieval.py
server/api/: search.py  storage.py
server/api/endpoint/: search.py
server/core/: config.py  logger.py
server/db/: postgres_db.py  qdrant_db.py
server/db/models/: author_scores.py  citation_edges.py  papers.py
server/db/repo/: author_scores.py  citation_edges.py  papers.py
server/schema/: enrich.py  search.py  storage.py
server/scripts/: download_models.py  seed_db.py
server/services/: apiOrchestration.py  api_harvest_service.py  citationNetwork.py  enrich_service.py  ingestion.py  pagerank_service.py  retrieval.py  search_service.py  storage_service.py  vectorstore.py
server/utils/: embedding_util.py  llm_util.py  logger.py  score_fusion_util.py
