[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asgiref==3.11.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "fastapi==0.135.1",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "googleapis-common-protos==1.73.0",
    "greenlet==3.3.2",
    "groq==0.37.1",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.4.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.6.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "igraph==1.0.0",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==1.2.18",
    "langchain-groq==1.1.2",
    "langsmith==0.7.16",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-instrumentation==0.61b0",
    "opentelemetry-instrumentation-asgi==0.61b0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "opentelemetry-util-http==0.61b0",
    "orjson==3.11.7",
    "packaging==26.0",
    "portalocker==3.2.0",
    "prometheus-client==0.24.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "protobuf==6.33.5",
    "psycopg2>=2.9.11",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "qdrant-client==1.17.0",
    "regex==2026.2.28",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentence-transformers==5.2.3",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.41.0",
    "wrapt==1.17.3",
    "xxhash==3.6.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
